--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi-angular",
-  "version": "2.0.0-beta.12",
+  "version": "2.0.0",
   "description": "DatX mixin for Angular JSON API support",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -74,8 +74,8 @@
     ]
   },
   "dependencies": {
-    "@datx/core": "^2.0.0-beta.12",
-    "@datx/jsonapi": "^2.0.0-beta.13",
-    "@datx/utils": "^2.0.0-beta.13"
+    "@datx/core": "^2.0.0",
+    "@datx/jsonapi": "^2.0.0",
+    "@datx/utils": "^2.0.0"
   }
 }
