--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi",
-  "version": "2.0.0-beta.13",
+  "version": "2.0.0",
   "description": "DatX mixin for JSON API support",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -69,8 +69,8 @@
     ]
   },
   "dependencies": {
-    "@datx/core": "^2.0.0-beta.12",
-    "@datx/network": "^2.0.0-beta.14",
-    "@datx/utils": "^2.0.0-beta.13"
+    "@datx/core": "^2.0.0",
+    "@datx/network": "^2.0.0",
+    "@datx/utils": "^2.0.0"
   }
 }
