--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/network",
-  "version": "2.0.0-beta.14",
+  "version": "2.0.0",
   "description": "DatX network layer",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -64,7 +64,7 @@
     ]
   },
   "dependencies": {
-    "@datx/core": "^2.0.0-beta.12",
-    "@datx/utils": "^2.0.0-beta.13"
+    "@datx/core": "^2.0.0",
+    "@datx/utils": "^2.0.0"
   }
 }
