--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/core",
-  "version": "2.0.0-beta.12",
+  "version": "2.0.0",
   "description": "A MobX data store",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -58,6 +58,6 @@
     ]
   },
   "dependencies": {
-    "@datx/utils": "^2.0.0-beta.13"
+    "@datx/utils": "^2.0.0"
   }
 }
