--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -25,8 +25,12 @@
     "rollup": "^2.38.5",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-typescript2": "^0.29.0",
+    "rxjs": "^7.0.0",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
+  },
+  "peerDependencies": {
+    "rxjs": "^6.0.0 | ^7.0.0"
   },
   "scripts": {
     "test": "jest --coverage",
