--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -18,13 +18,14 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-typescript": "^8.2.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^15.0.2",
     "jest": "^26.6.3",
     "rollup": "^2.38.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
-    "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^26.4.4",
+    "tslib": "^2.3.0",
     "typescript": "^4.1.3"
   },
   "scripts": {
