--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -50,6 +50,7 @@
       "ts",
       "js"
     ],
+    "testEnvironment": "jsdom",
     "testRegex": "test/(.*).test.ts$",
     "globals": {
       "ts-jest": {
