--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -43,6 +43,7 @@
       "ts",
       "js"
     ],
+    "testEnvironment": "jsdom",
     "testRegex": "test/(.*).test.ts$",
     "globals": {
       "ts-jest": {
