--- a/packages/network-core/package.json
+++ b/packages/network-core/package.json
@@ -20,8 +20,11 @@
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@types/jest": "^26.0.20",
+    "@types/nock": "^11.1.0",
     "@types/node": "^14.14.27",
     "jest": "^26.6.3",
+    "nock": "^13.1.1",
+    "node-fetch": "^2.6.1",
     "rollup": "^2.38.5",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-typescript2": "^0.29.0",
