--- a/lerna.json
+++ b/lerna.json
@@ -3,10 +3,11 @@
   "packages": [
     "packages/*"
   ],
-  "version": "2.3.0",
+  "version": "2.3.1",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "exact": true
 }
