--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,9 +32,9 @@ jobs:
       - run: lerna bootstrap
       - name: Cleanup MobX
         if: ${{ matrix.mobx-version == '0' }}
-        run: cd packages/datx-utils; yarn remove mobx
+        run: cd packages/utils; yarn remove mobx
       - name: Install correct MobX version
         if: ${{ matrix.mobx-version > 0 }}
-        run: cd packages/datx-utils; yarn add mobx@${{ matrix.mobx-version }} --dev
+        run: cd packages/utils; yarn add mobx@${{ matrix.mobx-version }} --dev
       - run: lerna run build
       - run: MOBX_VERSION=${{ matrix.mobx-version }} lerna run test
