--- a/packages/datx-jsonapi-angular/tsconfig.build.json
+++ b/packages/datx-jsonapi-angular/tsconfig.build.json
@@ -9,7 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "inlineSources": true,
-    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "lib": ["es2015", "es2016", "es2017", "es2018", "es2019"],
     "module": "esnext",
     "noImplicitAny": false,
     "noImplicitReturns": true,
@@ -17,7 +17,7 @@
     "outDir": ".",
     "strict": true,
     "strictFunctionTypes": false,
-    "target": "es6",
+    "target": "es5",
     "esModuleInterop": true
   },
   "exclude": ["node_modules", "examples"],
