--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "eslint": "^7.18.0",
     "husky": "^4.3.8",
     "lerna": "^4.0.0",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.3"
+    "prettier": "2.2.1",
+    "typescript": "4.2.3"
   },
   "scripts": {
     "precommit": "npm run lint & lerna run test",
