--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -1,41 +1,11 @@
 {
   "name": "@datx/jsonapi-angular",
-  "version": "2.4.3",
-  "description": "DatX mixin for Angular JSON API support",
-  "main": "dist/bundles/datx-jsonapi-angular.umd.js",
-  "module": "dist/fesm2015/datx-jsonapi-angular.js",
-  "es2015": "dist/fesm2015/datx-jsonapi-angular.js",
-  "esm2015": "dist/esm2015/datx-jsonapi-angular.js",
-  "fesm2015": "dist/fesm2015/datx-jsonapi-angular.js",
-  "typings": "dist/datx-jsonapi-angular.d.ts",
-  "sideEffects": false,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/infinum/datx.git"
-  },
-  "bugs": {
-    "url": "https://github.com/infinum/datx/issues"
-  },
-  "homepage": "https://github.com/infinum/datx#readme",
-  "author": "Infinum JavaScript Team <hello@infinum.com>",
-  "license": "MIT",
-  "keywords": [
-    "datx",
-    "mobx",
-    "jsonapi",
-    "angular"
-  ],
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "build": "ng build datx-jsonapi-angular",
     "prepublish": "npm run build",
     "test": "jest"
-  },
-  "dependencies": {
-    "@datx/core": "2.4.0",
-    "@datx/jsonapi": "2.4.0",
-    "@datx/network": "2.4.0",
-    "@datx/utils": "2.4.0"
   },
   "peerDependencies": {
     "@angular/common": ">=12",
@@ -43,6 +13,10 @@
     "rxjs": "6 || 7"
   },
   "devDependencies": {
+    "@datx/core": "2.4.0",
+    "@datx/jsonapi": "2.4.0",
+    "@datx/network": "2.4.0",
+    "@datx/utils": "2.4.0",
     "@angular-devkit/build-angular": "~14.0.1",
     "@angular/animations": "~14.0.1",
     "@angular/cli": "~14.0.1",
