--- a/packages/datx-jsonapi-angular/projects/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/projects/datx-jsonapi-angular/package.json
@@ -1,3 +1,34 @@
 {
-  "name": "@datx/jsonapi-angular"
+  "name": "@datx/jsonapi-angular",
+  "version": "2.4.3-beta.0",
+  "description": "DatX mixin for Angular JSON API support",
+  "sideEffects": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/infinum/datx.git"
+  },
+  "bugs": {
+    "url": "https://github.com/infinum/datx/issues"
+  },
+  "homepage": "https://github.com/infinum/datx#readme",
+  "author": "Infinum JavaScript Team <hello@infinum.com>",
+  "license": "MIT",
+  "keywords": [
+    "datx",
+    "mobx",
+    "jsonapi",
+    "angular"
+  ],
+  "dependencies": {
+    "@datx/core": "2.4.0",
+    "@datx/jsonapi": "2.4.0",
+    "@datx/network": "2.4.0",
+    "@datx/utils": "2.4.0",
+    "tslib": "^2.3.0"
+  },
+  "peerDependencies": {
+    "@angular/common": ">=12",
+    "@angular/core": ">=12",
+    "rxjs": "6 || 7"
+  }
 }
