--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "devDependencies": {
     "@infinumjs/eslint-config-core-ts": "^3.3.1",
     "eslint": "^8.17.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "lerna": "^5.1.1",
     "prettier": "2.7.1",
     "typescript": "4.7.4"
   },
   "scripts": {
     "precommit": "npm run lint & lerna run test",
-    "lint": "eslint packages/**/*.ts"
+    "lint": "eslint packages/**/*.ts",
+    "prepare": "husky install"
   },
   "private": true,
   "workspaces": [
