--- a/packages/datx-jsonapi-angular/projects/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/projects/datx-jsonapi-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi-angular",
-  "version": "2.4.3-beta.1",
+  "version": "2.4.7",
   "description": "DatX mixin for Angular JSON API support",
   "sideEffects": false,
   "repository": {
@@ -25,7 +25,7 @@
   "peerDependencies": {
     "@angular/common": ">=12",
     "@angular/core": ">=12",
-    "@datx/jsonapi": "2.4.0",
+    "@datx/jsonapi": "2.4.6",
     "rxjs": "6 || 7"
   }
 }
