--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -32,7 +32,8 @@
     "test": "jest --coverage",
     "watch": "jest --watch --coverage",
     "prepublish": "npm run build",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "ts:check": "tsc --noEmit"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
