--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -7,7 +7,8 @@
     "copy-license": "cp ./LICENSE ./dist/LICENSE",
     "copy-readme": "cp ./README.md ./dist/README.md",
     "prepublish": "npm run build",
-    "test": "jest"
+    "test": "jest",
+    "ts:check": "tsc --noEmit"
   },
   "peerDependencies": {
     "@angular/common": ">=12",
