--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -2,8 +2,8 @@
   "name": "@datx/core",
   "version": "2.4.0",
   "description": "A MobX data store",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "typings": "dist/index.d.ts",
   "repository": {
     "type": "git",
@@ -16,18 +16,13 @@
   "author": "Infinum JavaScript Team <hello@infinum.com>",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^23.0.2",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^9.0.2",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.7",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
-    "rollup": "^3.2.3",
-    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
-    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^29.0.3",
     "tslib": "~2.4.0",
+    "tsup": "^6.3.0",
     "typescript": "~4.8.4"
   },
   "dependencies": {
@@ -37,7 +32,19 @@
     "test": "jest --coverage",
     "watch": "jest --watch --coverage",
     "prepublish": "npm run build",
-    "build": "rollup -c --compact --bundleConfigAsCjs"
+    "build": "tsup src/index.ts src/min.ts"
+  },
+  "tsup": {
+    "clean": true,
+    "dts": true,
+    "format": [
+      "cjs",
+      "esm"
+    ],
+    "tsconfig": "tsconfig.build.json",
+    "platform": "neutral",
+    "splitting": false,
+    "treeshake": true
   },
   "jest": {
     "coveragePathIgnorePatterns": [
