--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -44,7 +44,8 @@
     "tsconfig": "tsconfig.build.json",
     "platform": "neutral",
     "splitting": false,
-    "treeshake": true
+    "treeshake": true,
+    "minify": true
   },
   "jest": {
     "coveragePathIgnorePatterns": [
