--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -34,8 +34,8 @@
     "watch": "rollup --config --watch"
   },
   "dependencies": {
-    "@datx/core": "2.5.0-beta.0",
-    "@datx/jsonapi": "2.5.0-beta.1"
+    "@datx/core": "^2.5.0-beta.4",
+    "@datx/jsonapi": "^2.5.0-beta.5"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.0",
@@ -54,18 +54,18 @@
     "isomorphic-fetch": "3.0.0",
     "jest": "^27.5.1",
     "msw": "0.39.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "rollup": "^2.38.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-terser": "^7.0.2",
-    "swr": "2.0.0-beta.3",
+    "swr": "2.0.0-beta.6",
     "tslib": "^2.3.0",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
     "react": "^16.11.0 || ^17.0.0 || ^18.0.0",
-    "swr": "^1.3.0 || ^2.0.0-beta.3"
+    "swr": "^1.3.0 || ^2.0.0-beta.3 || ^2.0.0-rc.0 || ^2.0.0"
   }
 }
