--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -26,12 +26,12 @@
   "devDependencies": {
     "@infinumjs/eslint-config-react-ts": "^2.12.0",
     "@next/eslint-plugin-next": "13.0.1",
-    "@types/node": "18.11.9",
+    "@types/node": "^18.7.6",
     "@types/react": "18.0.24",
     "@types/uuid": "^8.3.4",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "source-map-explorer": "2.5.3",
-    "typescript": "4.8.4"
+    "typescript": "~4.7.3"
   }
 }
