--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -33,10 +33,6 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.1.2",
     "@angular/router": "~14.2.0",
-    "@datx/core": "2.5.0-beta.0",
-    "@datx/jsonapi": "2.5.0-beta.1",
-    "@datx/network": "2.5.0-beta.0",
-    "@datx/utils": "2.5.0-beta.0",
     "@types/jest": "^28.1.1",
     "@types/node": "^18.7.6",
     "jest": "^28.1.1",
@@ -44,7 +40,7 @@
     "jest-preset-angular": "^12.1.0",
     "ng-packagr": "^14.0.1",
     "rxjs": "~7.5.5",
-    "tslib": "^2.4.0",
+    "tslib": "~2.4.0",
     "typescript": "~4.7.3",
     "zone.js": "~0.11.5"
   }
