--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -26,7 +26,7 @@
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/jest": "^28.1.1",
     "@types/node": "^18.7.6",
-    "@types/react": "^18.0.12",
+    "@types/react": "18.0.24",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "28.1.2",
     "rollup": "^2.75.6",
