--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -28,7 +28,7 @@
     "@types/node": "^18.7.6",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "28.1.2",
-    "mobx": "^6.6.0",
+    "mobx": "6.6.2",
     "rollup": "^2.75.6",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
     "rollup-plugin-terser": "^7.0.2",
