--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -38,31 +38,31 @@
     "@datx/jsonapi": "^2.5.0-beta.5"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-typescript": "^8.2.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@swc-node/jest": "1.4.3",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.2.1",
     "@types/isomorphic-fetch": "0.0.36",
-    "@types/jest": "^28.1.5",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^16.0.0",
-    "@types/uuid": "^8.3.0",
-    "isomorphic-fetch": "3.0.0",
-    "jest": "28.1.3",
-    "jest-environment-jsdom": "28.1.3",
+    "@types/jest": "^28.1.1",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.7.6",
+    "@types/uuid": "^8.3.4",
+    "isomorphic-fetch": "^3.0.0",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "28.1.2",
     "msw": "0.39.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rollup": "^2.38.0",
-    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
+    "rollup": "^2.75.6",
+    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
     "rollup-plugin-terser": "^7.0.2",
     "swr": "2.0.0-beta.6",
-    "tslib": "^2.3.0",
-    "typescript": "^4.6.3",
-    "uuid": "^8.3.2"
+    "tslib": "~2.4.0",
+    "typescript": "~4.7.3",
+    "uuid": "^9.0.0"
   },
   "peerDependencies": {
     "react": "^16.11.0 || ^17.0.0 || ^18.0.0",
