--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
   "name": "datx",
-  "devDependencies": {
-    "@infinumjs/eslint-config-core-ts": "^3.3.1",
-    "eslint": "^8.17.0",
-    "husky": "^8.0.0",
-    "lerna": "^5.1.1",
-    "prettier": "2.7.1",
-    "typescript": "4.7.4"
-  },
   "scripts": {
     "precommit": "npm run lint & lerna run test",
     "lint": "eslint packages/**/*.ts",
+    "pkg:check": "manypkg check",
+    "pkg:fix": "manypkg fix",
     "postinstall": "npm run prepare",
     "prepare": "husky install"
   },
@@ -24,8 +18,15 @@
     }
   },
   "dependencies": {
+    "@infinumjs/eslint-config-core-ts": "^3.3.1",
+    "@manypkg/cli": "^0.19.2",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1"
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "husky": "^8.0.0",
+    "lerna": "^5.1.1",
+    "prettier": "2.7.1",
+    "typescript": "~4.7.3"
   },
   "packageManager": "yarn@3.2.1"
 }
