--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -36,7 +36,7 @@
     "jest-preset-angular": "^12.1.0",
     "ng-packagr": "^14.0.1",
     "rxjs": "~7.5.5",
-    "tslib": "^2.4.0",
+    "tslib": "~2.4.0",
     "typescript": "~4.7.3",
     "zone.js": "~0.11.5"
   }
