--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -20,7 +20,7 @@
     "next-api-router": "^1.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "2.0.0-beta.6",
+    "swr": "2.0.0-rc.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
