--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -59,13 +59,13 @@
     "rollup": "^2.75.6",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
     "rollup-plugin-terser": "^7.0.2",
-    "swr": "2.0.0-beta.6",
+    "swr": "2.0.0-rc.0",
     "tslib": "~2.4.0",
     "typescript": "~4.7.3",
     "uuid": "^9.0.0"
   },
   "peerDependencies": {
     "react": "^16.11.0 || ^17.0.0 || ^18.0.0",
-    "swr": "^1.3.0 || ^2.0.0-beta.3 || ^2.0.0-rc.0 || ^2.0.0"
+    "swr": "^1.3.0 || ^2.0.0-rc.0 || ^2.0.0"
   }
 }
