--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -54,6 +54,7 @@
     "jest": "^28.1.1",
     "jest-environment-jsdom": "28.1.2",
     "msw": "0.39.2",
+    "next": "^13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rollup": "^2.75.6",
@@ -65,6 +66,7 @@
     "uuid": "^9.0.0"
   },
   "peerDependencies": {
+    "next": ">=11.0.0",
     "react": "^16.11.0 || ^17.0.0 || ^18.0.0",
     "swr": "^1.3.0 || ^2.0.0-rc.0 || ^2.0.0"
   }
