--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -33,7 +33,9 @@
     "jest": "^28.1.1",
     "lodash": "^4.17.21",
     "rollup": "^2.75.6",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
+    "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^28.0.4",
     "tslib": "~2.4.0",
