--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -23,7 +23,9 @@
     "@types/node": "^18.7.6",
     "jest": "^28.1.1",
     "rollup": "^2.75.6",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
+    "rollup-plugin-generate-package-json": "^3.2.0",
     "ts-jest": "^28.0.4",
     "tslib": "~2.4.0",
     "typescript": "~4.7.3"
