--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Run & deploy
         run: |
           cd website
-          yarn install
-          GIT_USER="${{ secrets.DOCS_USER_NAME }}" yarn run publish-gh-pages
+          npm ci
+          GIT_USER="${{ secrets.DOCS_USER_NAME }}" npm run publish-gh-pages
