--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "lint": "eslint packages/**/*.ts",
     "postinstall": "npm run prepare",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "publish": "lerna publish --contents dist"
   },
   "private": true,
   "workspaces": [
