--- a/packages/datx-jsonapi-angular/projects/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/projects/datx-jsonapi-angular/package.json
@@ -25,10 +25,10 @@
   "peerDependencies": {
     "@angular/common": ">=12",
     "@angular/core": ">=12",
-    "@datx/core": "2.4.8",
-    "@datx/jsonapi": "2.4.8",
-    "@datx/network": "2.4.8",
-    "@datx/utils": "2.4.8",
+    "@datx/core": "2.5.0-beta.4",
+    "@datx/jsonapi": "2.5.0-beta.5",
+    "@datx/network": "2.5.0-beta.4",
+    "@datx/utils": "2.5.0-beta.4",
     "rxjs": "6 || 7"
   }
 }
