--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,7 @@
 {
   "lerna": "2.5.1",
-  "packages": [
-    "packages/*",
-    "examples/*"
-  ],
-  "version": "2.5.0-beta.5",
+  "packages": ["packages/*"],
+  "version": "2.4.10",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "publishConfig": {
