--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,10 +33,10 @@ jobs:
         with:
           path: node_modules
           # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-datx-${{  hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-datx-${{  hashFiles('**/yarn.lock') }}-${{ matrix.node-version }}-${{ matrix.mobx-version }}
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
-            ${{ runner.os }}-datx-${{ hashFiles('**/yarn.lock') }}
+            ${{ runner.os }}-datx-${{ hashFiles('**/yarn.lock') }}-${{ matrix.node-version }}-${{ matrix.mobx-version }}
       - run: yarn
       - name: Cleanup MobX
         if: ${{ matrix.mobx-version == '0' }}
