--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
       - run: npm install -g lerna@6
       - run: yarn --immutable
       - name: Cleanup MobX
@@ -36,5 +35,5 @@ jobs:
       - name: Install correct MobX version
         if: ${{ matrix.mobx-version > 0 }}
         run: cd packages/datx-utils; yarn add mobx@${{ matrix.mobx-version }} --dev
-      - run: yarn build --skip-nx-cache
-      - run: MOBX_VERSION=${{ matrix.mobx-version }} yarn test --skip-nx-cache
+      - run: lerna run build
+      - run: MOBX_VERSION=${{ matrix.mobx-version }} lerna run test
