--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@datx/core",
-  "version": "2.4.0",
+  "name": "@datx/schema",
+  "version": "0.0.1",
   "description": "A MobX data store",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -16,17 +16,18 @@
   "author": "Infinum JavaScript Team <hello@infinum.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^29.2.0",
-    "@types/node": "^18.11.7",
-    "jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.2.2",
+    "@swc/core": "^1.3.24",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.17",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "ts-jest": "^29.0.3",
-    "tslib": "~2.4.0",
-    "tsup": "^6.3.0",
-    "typescript": "~4.8.4"
+    "tslib": "~2.4.1",
+    "tsup": "^6.5.0",
+    "typescript": "~4.9.4"
   },
   "dependencies": {
-    "type-fest": "^3.1.0"
+    "type-fest": "^3.4.0"
   },
   "scripts": {
     "test": "jest --coverage",
