--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -68,6 +68,6 @@
   },
   "peerDependencies": {
     "react": "^16.11.0 || ^17.0.0 || ^18.0.0",
-    "swr": "^1.3.0 || ^2.0.0-beta.3"
+    "swr": "^1.3.0 || ^2.0.0"
   }
 }
